@@ -1,13 +1,11 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.apis.google.GoogleJsonTokenExtractor;
-import com.github.scribejava.apis.service.GoogleOAuthServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.extractors.TokenExtractor;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
-import com.github.scribejava.core.oauth.OAuth20Service;
 import com.github.scribejava.core.utils.OAuthEncoder;
 
 public class GoogleApi20 extends DefaultApi20 {
@@ -46,10 +44,5 @@ public class GoogleApi20 extends DefaultApi20 {
     @Override
     public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
         return GoogleJsonTokenExtractor.instance();
-    }
-
-    @Override
-    public OAuth20Service createService(OAuthConfig config) {
-        return new GoogleOAuthServiceImpl(this, config);
     }
 }
