@@ -4,7 +4,6 @@ import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.model.AbstractRequest;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.oauth.OAuth20Service;
 
 public class LinkedIn20ServiceImpl extends OAuth20Service {
@@ -16,14 +15,5 @@ public class LinkedIn20ServiceImpl extends OAuth20Service {
     @Override
     public void signRequest(OAuth2AccessToken accessToken, AbstractRequest request) {
         request.addQuerystringParameter("oauth2_access_token", accessToken.getAccessToken());
-    }
-
-    @Override
-    protected <T extends AbstractRequest> T createAccessTokenRequest(String code, T request) {
-        super.createAccessTokenRequest(code, request);
-        if (!getConfig().hasGrantType()) {
-            request.addParameter(OAuthConstants.GRANT_TYPE, OAuthConstants.AUTHORIZATION_CODE);
-        }
-        return request;
     }
 }
