@@ -1,6 +1,7 @@
 [SNAPSHOT]
  * simplify async/sync usages
  * add optional "User-Agent" config option to use while making http calls
+ * refactor usage of grant_type [authorization_code|refresh_token|password|etc]
 
 [2.5.3]
  * fix - do not send two Content-Type header in async requests
